Colaboratory를 통해 생성됨

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNi5bU6Gbc42tTJpDYQvyPa",
+      "authorship_tag": "ABX9TyNtCh+70e2LJhb7E95SLFrY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,12 +33,73 @@
       "source": [
         "# 1주차 과제\n",
         "-----------------------------------------------------------\n",
-        "##### 주제 : 인공지능 관련 제품들과 서비스 속 적용된 인공지능 기술 분석\n",
+        "##### 주제 : 인공지능 관련 제품들과 서비스 속 적용된 기술 분석\n",
         "-----------------------------------------------------------\n",
-        "* 언어\n",
-        "* 음성\n",
-        "* 이미지\n",
-        "* 자율주행\n",
+        "* 언어 분야 : __네이버__의 AI기술 기반 검색어 교정 시스템인 'AI QSpell'과 최신 AI 기술을 적용한 자동완성 서비스.\n",
+        "  * __자연언어처리(Natural Language Processing, NLP)__ 분석을 통한 컴퓨터와 인간 언어 사이의 상호작용\n",
+        "  * NLP 응용분야 : 스펠링 및 맞춤법 검사, 키워드 검색, 동의어 발견, 웹사이트로부터 정보 추출, 문서 분류, 기계 번역, 복잡한 질문에 대한 답변 등.\n",
+        "  * NLP 산업 : 검색, 온라인 광고 매칭, 자동번역, 마케팅/금융에서의 감성분석, Speech Recognition, 챗봇 등에서 활용.\n",
+        "  *[NLP의 기본 절차](https://ratsgo.github.io/natural%20language%20processing/2017/03/22/lexicon/)\n",
+        "\n",
+        "* 음성 분야 : __네이버 클로바의 음성 인식 기술, CLOVA Speech__\n",
+        "\n",
+        "  * 음성 어시스턴트를 위한 __음성 명령 인식 기술__\n",
+        "  \n",
+        "    - 정확한 호출어 인식 \n",
+        "    : 헤이 클로바, 안녕 네이버와 같은 호출어 발화에 대해 높은 정확도로 대응\n",
+        "    - 소음에 강한 음성 모델\n",
+        "    : 주변 소음을 제거하며 어시스턴트 스스로 내는 소리가 다시 입력되지 않도록 하는 AEC를 제공\n",
+        "    - 특정 도메인 사전 학습\n",
+        "    : 새로운 음성 명렁어 세트를 사전에 학습하여 서비스 출시에 필요한 인식률을 사전에 향상\n",
+        "    - 다국어 음성 인식 지원\n",
+        "    : 세계 최고 수준의 한국어/일본어 모델과 상용화 가능한 영어, 중국어, 프랑스어, 스페인어 모델을 제공\n",
+        "    - 실시간 스트리밍 프로토콜\n",
+        "    : 응답시간을 최소화하는 인터렉티브한 응용 프로그램을 제작\n",
+        "    - 인식 후 처리\n",
+        "    : 오인식을 줄이기 위해 음성 인식 결과를 다듬어 보정하는 후처리를 수행\n",
+        "    - 서비스 적용 사례\n",
+        "      - 클로바 인공지능 스피커\n",
+        "      - 네이버 앱\n",
+        "      - 네이버 지도\n",
+        "      - AiCall\n",
+        "\n",
+        "  * 정형화되지 않은 음성을 인식하는 __딕테이션(NEST 기술)__\n",
+        "    \n",
+        "    - [NEST 샘플](https://tv.naver.com/v/12537360)\n",
+        "    - 정확한 장문 딕테이션\n",
+        "    : End-to-end 방식으로 정형화되지 않은 긴 문장 인식에 특화된 음성 인식 엔진을 제공\n",
+        "    - 데이터 학습 없이 빠른 대응\n",
+        "    : 해당 도메인의 음성 데이터에 대한 사전 학습이 없는 기본 모델만으로도 정확한 인식 결과를 보장\n",
+        "    - 미디어에 강한 모델\n",
+        "    : 방송 영상이나 오디오 클립의 대화 음성을 텍스트로 변환하고, 자동으로 자막을 생성\n",
+        "    - 스트리밍 또는 배치 처리\n",
+        "    : 미리 녹화된 파일을 처리하는 방식이 가능하며, 스트리밍 프로토콜을 이용한 실시간 딕테이션을 준비중.\n",
+        "    - 도메인 특화 지원\n",
+        "    : 학습을 하지 않아도 높은 정확도를 보이나 데이터 학습으로 특정 도메인의 음성 인식률을 더욱 높임\n",
+        "    - 타임 스탬프 지원\n",
+        "    : 문장의 시작 시각을 표시하는 타임 스탬프를 제공중이며, 단어별 시작 시각 생성 기능을 준비중.\n",
+        "    - 서비스 적용 제안\n",
+        "      - 네이버 뉴스 자막\n",
+        "      - 고객센터\n",
+        "      - 오디오 / 비디오 관리\n",
+        "      - 자동 자막 생성\n",
+        "\n",
+        "  * 목소리를 인식하고 정확하게 분리하는 __화자인식 기술__\n",
+        "    \n",
+        "    - 화자 목소리 인식\n",
+        "    : 사전에 등록된 목소리에 대해 1초 남짓한 짧은 호출어에서 화자의 특징을 추출하여 인식\n",
+        "    - 서로 다른 화자 구분\n",
+        "    : 대화 중인 여러 명의 화자의 목소리를 분리하여 각 화자의 대화 스크립트를 작성하는 기술을 연구 및 개발중\n",
+        "    - 움직이는 입모양 인식\n",
+        "    : 비디오 분석을 통해 영상에서 말하는 사람을 확인하고 분리하는 AVSE / AVSD 기술을 연구 및 개발중\n",
+        "\n",
+        "  <링크>\n",
+        "  \n",
+        "  [네이버 클로바](https://clova.ai/speech#voice_command_kr)\n",
+        "\n",
+        "\n",
+        "* 이미지 분야\n",
+        "* 자율주행 자동차 분야\n",
         "\n",
         "\n"
       ]
