Colaboratory를 통해 생성됨

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNtCh+70e2LJhb7E95SLFrY",
+      "authorship_tag": "ABX9TyO3sZhv5xd/uajRsWSU2PZt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,13 +35,13 @@
         "-----------------------------------------------------------\n",
         "##### 주제 : 인공지능 관련 제품들과 서비스 속 적용된 기술 분석\n",
         "-----------------------------------------------------------\n",
-        "* 언어 분야 : __네이버__의 AI기술 기반 검색어 교정 시스템인 'AI QSpell'과 최신 AI 기술을 적용한 자동완성 서비스.\n",
+        "1. 언어 분야 : __네이버__의 AI기술 기반 검색어 교정 시스템인 'AI QSpell'과 최신 AI 기술을 적용한 자동완성 서비스.\n",
         "  * __자연언어처리(Natural Language Processing, NLP)__ 분석을 통한 컴퓨터와 인간 언어 사이의 상호작용\n",
         "  * NLP 응용분야 : 스펠링 및 맞춤법 검사, 키워드 검색, 동의어 발견, 웹사이트로부터 정보 추출, 문서 분류, 기계 번역, 복잡한 질문에 대한 답변 등.\n",
         "  * NLP 산업 : 검색, 온라인 광고 매칭, 자동번역, 마케팅/금융에서의 감성분석, Speech Recognition, 챗봇 등에서 활용.\n",
         "  *[NLP의 기본 절차](https://ratsgo.github.io/natural%20language%20processing/2017/03/22/lexicon/)\n",
         "\n",
-        "* 음성 분야 : __네이버 클로바의 음성 인식 기술, CLOVA Speech__\n",
+        "2. 음성 분야 : __네이버 클로바의 음성 인식 기술, CLOVA Speech__\n",
         "\n",
         "  * 음성 어시스턴트를 위한 __음성 명령 인식 기술__\n",
         "  \n",
@@ -98,8 +98,38 @@
         "  [네이버 클로바](https://clova.ai/speech#voice_command_kr)\n",
         "\n",
         "\n",
-        "* 이미지 분야\n",
-        "* 자율주행 자동차 분야\n",
+        "3. 이미지 분야 : 뷰노(VUNO)의 의료 인공지능 솔루션 - 의료분야에 특화된 자체 머신러닝 엔진인 VUNO-net™을 기반으로 의료 영상부터 생체 신호까지 의료 현장의 방대한 데이터를 분석하고 질환 진단을 보조하는 의료 인공지능 솔루션을 개발.\n",
+        "  - [BoneAge](https://www.youtube.com/watch?time_continue=1&v=uNAWZGFVgXA&feature=emb_title)\n",
+        "  : 국내에서 최초로 식품의약품안전처 허가를 받은 인공지능 의료기기로서, 성조숙증 / 저신장증 등의 성장 질환 진단을 위해 촬영된 손뼈 X-ray 영상을 AI가 자동으로 분석, 의사의 판독 업무를 보조\n",
+        "  - [DeepBrain](https://www.youtube.com/watch?v=nDo0x05HAFY&feature=emb_title)\n",
+        "  : AI 기반으로 알츠하이머 등 다양한 퇴행성 뇌질환에서 발생하는 뇌실질 위축 정도를 정량화 및 패턴화하고, 동일 연령 / 성별의 정상인과 비교해 진단을 보조\n",
+        "  - Chest X-ray\n",
+        "  : AI 기반으로 환자 흉부 X-ray 영상에서 주로 관찰되는 주요 비정상 소견을 학습해 영상 판독을 보조\n",
+        "  - Fundus AI\n",
+        "  - LungCT AI\n",
+        "\n",
+        "4. 자율주행 분야 : __현대자동차__의 Smart ADAS 시스템\n",
+        "  - ADAS 기술\n",
+        "  : 크게 인지, 판단, 제어로 구분된다.\n",
+        "    - 인지는 센서나 카메라를 통해 환경을 인식.\n",
+        "    - 판단은 컨트롤러를 통해 신호를 처리하거나 주변 상황에 따라 차량의 움직임을 결정.\n",
+        "    - 가감속이나 조향제어 등 직접적인 움직임을 담당.\n",
+        "\n",
+        "  - 차선 유지 지원 시스템 (LKAS, Lane Keeping Assist System)\n",
+        "  : 윈드실드 글라스에 장착된 카메라로 앞 차선을 인식한 후 방향 지시등 없이 차선을 이탈할 경우 스스로 경로를 바로잡음.\n",
+        "\n",
+        "  - 자동 긴급 제동 시스템 (AEB, Autonomous Emergency Braking System)\n",
+        "  : 차간 간격과 주행 속도에 따른 충돌상황을 예측하고 브레이크를 작동시켜 추돌을 방지\n",
+        "\n",
+        "  - 샤시 통합 제어 시스템 (VSM, Vehicle Stability Management System)\n",
+        "  : 제동시에 차량이 균형을 잃지 않도록 안전하게 자세를 유지.\n",
+        "\n",
+        "  - 전방 추돌 경보 시스템 (FCWS, Forward Collision Warning System)\n",
+        "  : 전방감지카메라를 통해 차선과 선행차량을 인식하고, 추돌이 예상될때는 경보음과 스티어링 휠 진동으로 운전자에게 경고해 사고를 미연에 방지.\n",
+        "\n",
+        "  - 어드밴스드 스마트 크루즈 컨트롤 (ASCC, Advanced Smart Cruise Control)\n",
+        "  : 상습 정체구간이나 혼잡한 도심에서 운전자가 페달과 브레이크를 번갈아 밟지 않아도 레이더 센서를 통해 앞 차량과의 거리를 일정하게 유지.\n",
+        "\n",
         "\n",
         "\n"
       ]
