Colaboratory를 통해 생성됨

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO3sZhv5xd/uajRsWSU2PZt",
+      "authorship_tag": "ABX9TyNrZ5nopEsM7M7L+Z8ML5u5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,13 +35,15 @@
         "-----------------------------------------------------------\n",
         "##### 주제 : 인공지능 관련 제품들과 서비스 속 적용된 기술 분석\n",
         "-----------------------------------------------------------\n",
-        "1. 언어 분야 : __네이버__의 AI기술 기반 검색어 교정 시스템인 'AI QSpell'과 최신 AI 기술을 적용한 자동완성 서비스.\n",
+        "- 언어 분야 : __네이버__의 AI기술 기반 검색어 교정 시스템인 'AI QSpell'과 최신 AI 기술을 적용한 자동완성 서비스.\n",
         "  * __자연언어처리(Natural Language Processing, NLP)__ 분석을 통한 컴퓨터와 인간 언어 사이의 상호작용\n",
         "  * NLP 응용분야 : 스펠링 및 맞춤법 검사, 키워드 검색, 동의어 발견, 웹사이트로부터 정보 추출, 문서 분류, 기계 번역, 복잡한 질문에 대한 답변 등.\n",
         "  * NLP 산업 : 검색, 온라인 광고 매칭, 자동번역, 마케팅/금융에서의 감성분석, Speech Recognition, 챗봇 등에서 활용.\n",
         "  *[NLP의 기본 절차](https://ratsgo.github.io/natural%20language%20processing/2017/03/22/lexicon/)\n",
         "\n",
-        "2. 음성 분야 : __네이버 클로바의 음성 인식 기술, CLOVA Speech__\n",
+        "\n",
+        "\n",
+        "- 음성 분야 : __네이버 클로바의 음성 인식 기술, CLOVA Speech__\n",
         "\n",
         "  * 음성 어시스턴트를 위한 __음성 명령 인식 기술__\n",
         "  \n",
@@ -98,7 +100,8 @@
         "  [네이버 클로바](https://clova.ai/speech#voice_command_kr)\n",
         "\n",
         "\n",
-        "3. 이미지 분야 : 뷰노(VUNO)의 의료 인공지능 솔루션 - 의료분야에 특화된 자체 머신러닝 엔진인 VUNO-net™을 기반으로 의료 영상부터 생체 신호까지 의료 현장의 방대한 데이터를 분석하고 질환 진단을 보조하는 의료 인공지능 솔루션을 개발.\n",
+        "\n",
+        "- 이미지 분야 : 뷰노(VUNO)의 의료 인공지능 솔루션 - 의료분야에 특화된 자체 머신러닝 엔진인 VUNO-net™을 기반으로 의료 영상부터 생체 신호까지 의료 현장의 방대한 데이터를 분석하고 질환 진단을 보조하는 의료 인공지능 솔루션을 개발.\n",
         "  - [BoneAge](https://www.youtube.com/watch?time_continue=1&v=uNAWZGFVgXA&feature=emb_title)\n",
         "  : 국내에서 최초로 식품의약품안전처 허가를 받은 인공지능 의료기기로서, 성조숙증 / 저신장증 등의 성장 질환 진단을 위해 촬영된 손뼈 X-ray 영상을 AI가 자동으로 분석, 의사의 판독 업무를 보조\n",
         "  - [DeepBrain](https://www.youtube.com/watch?v=nDo0x05HAFY&feature=emb_title)\n",
@@ -108,7 +111,9 @@
         "  - Fundus AI\n",
         "  - LungCT AI\n",
         "\n",
-        "4. 자율주행 분야 : __현대자동차__의 Smart ADAS 시스템\n",
+        "\n",
+        "\n",
+        "- 자율주행 분야 : __현대자동차__의 Smart ADAS 시스템\n",
         "  - ADAS 기술\n",
         "  : 크게 인지, 판단, 제어로 구분된다.\n",
         "    - 인지는 센서나 카메라를 통해 환경을 인식.\n",
