Colaboratory를 통해 생성됨

--- a/2주차과제.ipynb
+++ b/2주차과제.ipynb
@@ -70,7 +70,11 @@
       "metadata": {
         "id": "R8MW9Rqhu61b",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "7dd89c0d-24c1-44a7-a2f5-af4b2148b18a"
       },
       "source": [
         "# 주어진 변수(a, b, c) 직접 수정불가\n",
@@ -79,10 +83,18 @@
         "c = True\n",
         "\n",
         "\n",
-        "print()"
+        "print(type(a), type(b), type(c))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'str'> <class 'int'> <class 'bool'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -101,7 +113,11 @@
       "metadata": {
         "id": "wI7l2ltaRUKy",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "d11278b0-3a4f-4eb4-8eb4-8b65cabb3008"
       },
       "source": [
         "# 주어진 변수(num_list) 직접 수정 불가\n",
@@ -109,10 +125,21 @@
         "num_list = [1,2,3,4,5,6,7,8,9]\n",
         "answer = 0\n",
         "\n",
+        "for i in num_list :\n",
+        "  answer = answer + i\n",
+        "\n",
         "print(answer)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "45\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -133,21 +160,33 @@
       "metadata": {
         "id": "270XbDvYqvJu",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "770023bd-da79-4446-fca9-2afb539d5dba"
       },
       "source": [
         "# 주어진 변수(date)만 직접 수정불가, 다른 year, month, day 변수는 직접 수정가능\n",
         "# 슬라이스를 사용 안 할 경우 오답처리\n",
         "date = '20200511'\n",
         "\n",
-        "year = None\n",
-        "month = None\n",
-        "day = None\n",
+        "year = date[0:4]\n",
+        "month = date[4:6]\n",
+        "day = date[6:]\n",
         "\n",
         "print(year, month, day)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2020 05 11\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -166,16 +205,31 @@
       "metadata": {
         "id": "MiGjtBg3r2f_",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "13ec673c-4a5c-4f2b-cd75-e19e45d8986f"
       },
       "source": [
         "# 주어진 변수(summary) 직접 수정불가\n",
         "summary = 0\n",
         "\n",
+        "for i in range(1, 101) :\n",
+        "  summary += i\n",
+        "\n",
         "print(summary)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5050\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -194,16 +248,31 @@
       "metadata": {
         "id": "hHCquVTHbSNN",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "e4cdf77f-96cd-40e7-bf8d-43ea23f07c93"
       },
       "source": [
         "# 주어진 변수(hangul) 직접 수정불가\n",
         "hangul = '가나다라마바사'\n",
         "\n",
-        "# 출력"
+        "hangul = hangul[::-1]\n",
+        "\n",
+        "# 출력\n",
+        "print(hangul)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "사바마라다나가\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -222,16 +291,40 @@
       "metadata": {
         "id": "kcUrhpt5c22W",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "9110cf61-b7a6-4b6c-e82b-baed4560c49b"
       },
       "source": [
         "# 주어진 변수(num) 직접 수정불가\n",
         "num = \"70 50 90 70\"\n",
         "\n",
-        "#출력"
+        "str_list = num.split()\n",
+        "\n",
+        "str_length = len(str_list)\n",
+        "\n",
+        "sum = 0\n",
+        "\n",
+        "for i in range(0,str_length):\n",
+        "  sum = sum + int(str_list[i])\n",
+        "\n",
+        "avg = sum / str_length\n",
+        "\n",
+        "#출력\n",
+        "print(avg)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "70.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -250,16 +343,33 @@
       "metadata": {
         "id": "8gwIuAVWdl9Z",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "b52033fe-455e-4259-ddfa-31a9c4c120db"
       },
       "source": [
         "# 주어진 변수(n) 직접 수정불가\n",
         "n = int(input('숫자를 입력해주세요'))\n",
         "\n",
-        "#출력"
+        "#출력\n",
+        "if n % 2 == 0 :\n",
+        "  print(\"짝수\")\n",
+        "else :\n",
+        "  print(\"짝수가 아닙니다\")\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "숫자를 입력해주세요2\n",
+            "짝수\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -282,16 +392,34 @@
       "metadata": {
         "id": "9bEv0Wn3e_Da",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "77130af6-025e-4500-93b4-18b396193b27"
       },
       "source": [
         "# 주어진 변수(list_08) 직접 수정불가\n",
         "list_08 = [3, 4]\n",
         "\n",
-        "# 출력"
+        "val = 0\n",
+        "\n",
+        "# 출력\n",
+        "for i in range(0,2) :\n",
+        "  val = val + (list_08[i]**2)\n",
+        "\n",
+        "print(val)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "25\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -309,7 +437,11 @@
       "metadata": {
         "id": "j7MNZZGGuXu0",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "b6ad0160-b6c5-43d2-f40c-ab6a43a375bd"
       },
       "source": [
         "# 주어진 변수(num_10) 직접 수정불가\n",
@@ -317,12 +449,31 @@
         "num_10 = int(input('숫자를 입력해주세요'))\n",
         "\n",
         "def prime_number(n):\n",
+        "    \n",
+        "    if n != 1 :\n",
+        "      for i in range(2, n) :\n",
+        "        if n % i == 0:\n",
+        "          return print(\"소수가 아닙니다\")\n",
+        "    else :\n",
+        "      return print(\"소수가 아닙니다\")\n",
+        "\n",
+        "    return print(\"소수\")\n",
+        "    \n",
         "    pass\n",
         "\n",
         "prime_number(num_10)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "숫자를 입력해주세요3\n",
+            "소수\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -367,7 +518,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#### 정답 : "
+        "#### 정답 : 31"
       ]
     },
     {
@@ -405,7 +556,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#### 정답 : "
+        "#### 정답 : 14"
       ]
     },
     {
@@ -429,7 +580,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#### 정답 : "
+        "#### 정답 : 1"
       ]
     }
   ]
