Colaboratory를 통해 생성됨

--- a/3주차_과제.ipynb
+++ b/3주차_과제.ipynb
@@ -68,7 +68,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### 정답 : "
+        "정답 : 1.60"
       ]
     },
     {
@@ -104,7 +104,9 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import numpy as np\n",
+        "np.random.seed(123)\n",
+        "X = np.random.random_sample([5,3])*10"
       ],
       "execution_count": 0,
       "outputs": []
@@ -117,7 +119,36 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import pandas as pd\n",
+        "variables = ['X','Y','Z']\n",
+        "labels = ['ID_0','ID_1','ID_2','ID_3','ID_4']\n",
+        "df = pd.DataFrame(X,columns=variables,index=labels)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uua7IhpcjPRp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from scipy.spatial.distance import pdist, squareform"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HmeOOWfgjXNh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Y = pdist(df)"
       ],
       "execution_count": 0,
       "outputs": []
