--- a/3주차_과제.ipynb
+++ b/3주차_과제.ipynb
@@ -101,31 +101,135 @@
       "metadata": {
         "id": "JN1YPCENSphW",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 107
+        },
+        "outputId": "43d64284-5b8b-4807-e585-2e7505e9ce81"
       },
       "source": [
         "import numpy as np\n",
         "np.random.seed(123)\n",
-        "X = np.random.random_sample([5,3])*10"
+        "X = np.random.random_sample([5,3])*10\n",
+        "X"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[6.96469186, 2.86139335, 2.26851454],\n",
+              "       [5.51314769, 7.1946897 , 4.2310646 ],\n",
+              "       [9.80764198, 6.84829739, 4.80931901],\n",
+              "       [3.92117518, 3.43178016, 7.29049707],\n",
+              "       [4.38572245, 0.59677897, 3.98044255]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "ck00pZqZL9pD",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "39908a74-7381-4a30-d17e-1fdf0873bc9f"
       },
       "source": [
         "import pandas as pd\n",
         "variables = ['X','Y','Z']\n",
         "labels = ['ID_0','ID_1','ID_2','ID_3','ID_4']\n",
-        "df = pd.DataFrame(X,columns=variables,index=labels)"
+        "df = pd.DataFrame(X,columns=variables,index=labels)\n",
+        "df"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>X</th>\n",
+              "      <th>Y</th>\n",
+              "      <th>Z</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>ID_0</th>\n",
+              "      <td>6.964692</td>\n",
+              "      <td>2.861393</td>\n",
+              "      <td>2.268515</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ID_1</th>\n",
+              "      <td>5.513148</td>\n",
+              "      <td>7.194690</td>\n",
+              "      <td>4.231065</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ID_2</th>\n",
+              "      <td>9.807642</td>\n",
+              "      <td>6.848297</td>\n",
+              "      <td>4.809319</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ID_3</th>\n",
+              "      <td>3.921175</td>\n",
+              "      <td>3.431780</td>\n",
+              "      <td>7.290497</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ID_4</th>\n",
+              "      <td>4.385722</td>\n",
+              "      <td>0.596779</td>\n",
+              "      <td>3.980443</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "             X         Y         Z\n",
+              "ID_0  6.964692  2.861393  2.268515\n",
+              "ID_1  5.513148  7.194690  4.231065\n",
+              "ID_2  9.807642  6.848297  4.809319\n",
+              "ID_3  3.921175  3.431780  7.290497\n",
+              "ID_4  4.385722  0.596779  3.980443"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -145,13 +249,165 @@
       "metadata": {
         "id": "HmeOOWfgjXNh",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "4e1ae201-47b6-4038-a17b-91f45f8f2c64"
+      },
+      "source": [
+        "Y = pdist(df) # df <- X,Y,Z\n",
+        "Y"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([4.973534  , 5.51665266, 5.89988504, 3.83539555, 4.34707339,\n",
+              "       5.10431109, 6.69823298, 7.24426159, 8.31659367, 4.382864  ])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NsbtOu3zkDro",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "Y = pdist(df)"
+        "row_dist = pd.DataFrame(squareform(pdist(df,metric='euclidean')),columns=labels, index = labels)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RlfZ77PrkhD-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from scipy.cluster.hierarchy import linkage"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eL_RIPUsk0wK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "row_clusters = linkage(pdist(df, metric = 'euclidean'),method='complete')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BZerJX2klAPd",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 173
+        },
+        "outputId": "3b958bbb-8455-41f4-e86e-0da47e4e352f"
+      },
+      "source": [
+        "pd.DataFrame(row_clusters,\n",
+        "             columns = ['row label 1', 'row label 2', 'distance', 'no. of items in clust.'],\n",
+        "             index = ['cluster %d' %(i+1) for i in range(row_clusters.shape[0])])"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>row label 1</th>\n",
+              "      <th>row label 2</th>\n",
+              "      <th>distance</th>\n",
+              "      <th>no. of items in clust.</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>cluster 1</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>3.835396</td>\n",
+              "      <td>2.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>cluster 2</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>4.347073</td>\n",
+              "      <td>2.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>cluster 3</th>\n",
+              "      <td>3.0</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>5.899885</td>\n",
+              "      <td>3.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>cluster 4</th>\n",
+              "      <td>6.0</td>\n",
+              "      <td>7.0</td>\n",
+              "      <td>8.316594</td>\n",
+              "      <td>5.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           row label 1  row label 2  distance  no. of items in clust.\n",
+              "cluster 1          0.0          4.0  3.835396                     2.0\n",
+              "cluster 2          1.0          2.0  4.347073                     2.0\n",
+              "cluster 3          3.0          5.0  5.899885                     3.0\n",
+              "cluster 4          6.0          7.0  8.316594                     5.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -218,7 +474,12 @@
         "# W:가중치, x:학습 데이터 y:정답 데이터\n",
         "\n",
         "def cost_func(W, x, y):\n",
-        "  pass"
+        "  cost = 0\n",
+        "  n = len(x)\n",
+        "  for i in range(0,n) :\n",
+        "    cost = cost + ((W*x[i])-y[i])**2\n",
+        "  cost = cost/n\n",
+        "  return cost"
       ],
       "execution_count": 0,
       "outputs": []
@@ -248,7 +509,11 @@
       "metadata": {
         "id": "3XfP0-zIXQF6",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 215
+        },
+        "outputId": "7daa4a3b-b9f7-49c2-f277-ca5b07b11cd6"
       },
       "source": [
         "# 여기 코드셀은 변경하지 마세요.\n",
@@ -258,8 +523,26 @@
         "  curr_cost = cost_func(feed_W, x, y)\n",
         "  print(\"{:6.3f} | {:10.5f}\".format(feed_W, curr_cost))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-5.000 |  228.66667\n",
+            "-4.000 |  168.00000\n",
+            "-3.000 |  116.66667\n",
+            "-2.000 |   74.66667\n",
+            "-1.000 |   42.00000\n",
+            " 0.000 |   18.66667\n",
+            " 1.000 |    4.66667\n",
+            " 2.000 |    0.00000\n",
+            " 3.000 |    4.66667\n",
+            " 4.000 |   18.66667\n",
+            " 5.000 |   42.00000\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
