Colaboratory를 통해 생성됨

--- a/4주차_과제.ipynb
+++ b/4주차_과제.ipynb
@@ -73,22 +73,20 @@
       },
       "source": [
         "### MCP 뉴런\n",
-        ":\n",
+        ": 1943년 신경과학자인 워랜 맥컬록과 논리학자인 윌터 피츠는 하나의 사람 뇌 신경세포를 하나의 이진출력을 가지는 단순 논리 게이트로 설명했다. MCP 뉴런은 여러개의 입력 신호가 가지돌기에 도착하면 신경세포 내에서 이들을 하나의 신호로 통합하고, 통합된 신호값이 어떤 임계값을 초과하면 하나의 단일 신호가 생성되며, 이 신호가 축삭돌기를 통해 다른 신경세포로 전달하는 것과 같은 원리로 설명할 수 있다.\n",
         "\n",
         "### 퍼셉트론\n",
-        ":\n",
-        "\n",
+        ": MCP 뉴런 모델을 기초로 만들어진 알고리즘이다. 퍼셉트론은 하나의 MCP 뉴런이 출력신호를 발생할지 안할지 결정하기 위해 MCP 뉴런으로 들어오는 각 입력값에 곱해지는 가중치 값을 자동적으로 학습하도록 한 모델이다. 퍼셉트론은 딥러닝의 기원이 된다.\n",
         "### 역전파\n",
-        ":\n",
+        ": 신경망에는 입력층 은닉층 출력층이 있다. 역전파는 은닉층 노드값과 고정값을 비교하여 값이 큰쪽의 가중치 혹은 편향을 더 크게 조정하여 출력값이 지도 데이터가 되도록 만든다. 즉, 출력값과 지도 데이터 사이에 생기는 오차를 이용해 출력층에서 입력층 쪽으로 가중치를 조정하는것이다. \n",
         "\n",
         "### 강화학습\n",
-        ":\n",
-        "\n",
+        ": 어떤 환경 안에서 정의된 에이전트가 현재의 상태를 인식하여, 선택 가능한 행동들 중 보상을 최대화 하는 행동 혹은 행동 순서를 선택하는 방법이다. 강화학습은 다양한 경험을 할 수 있도록 에이전트의 행동을 결정하는 '탐험'과 학습된 결과에 따라 에이전트의 행동을 결정하는 '활용'이 있다. 강화학습을 푸는 알고리즘은 이 둘 사이의 균형을 어떻게 잡아야 할지에 초점을 맞춘다.\n",
         "### 과적합\n",
-        ":\n",
+        ": 머신러닝에서 학습 데이터를 과하게 학습 하는 것을 의미한다. 일반적으로 학습 된 데이터에 대해서는 오차가 감소하지만 실제 데이터에 대해서는 오차가 증가하게 된다.\n",
         "\n",
         "### 차원의 저주\n",
-        ": \n"
+        ": 고정된 크기의 훈련 데이터셋 차원이 늘어남에 따라 특성 공간이 점점 희소해 지는 현상을 말한다. 이론적으로 차원의 저주를 해결하는 해결책 중 하나는 훈련 샘플의 밀도가 충분히 높아질 때가지 훈련 데이터의 크기를 키우는 것이다. 하지만, 데이터가 무한정 있지 않기 때문에 문제가 된다.\n"
       ]
     },
     {
@@ -107,6 +105,60 @@
         "* 하나의 코드셀에 해당 코드를 한번에 다 적어서 실행해주세요 (__그렇게 하지 않을 경우, 아래 이미지와 같은 출력값이 나오지 않을 수 있습니다__)\n",
         "\n",
         "*__주의!__ 실제로 코딩해서 출력해보면 강의에 나온 출력 결과와 다르게 나옵니다!!\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SQ0afjE0qZIW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 215
+        },
+        "outputId": "e853a27f-d8c6-44de-f9c1-24fc8a9a2739"
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "tf.compat.v1.set_random_seed(2020)\n",
+        "x = 1\n",
+        "y = 0\n",
+        "w = tf.random.normal([1],0,1)\n",
+        "\n",
+        "import math\n",
+        "def sigmoid(x) :\n",
+        "  return 1/(1 + math.exp(-x))\n",
+        "\n",
+        "output = sigmoid(x*w)\n",
+        "print(output)\n",
+        "\n",
+        "for i in range(1000) : \n",
+        "  output = sigmoid(x*w)\n",
+        "  error = y - output\n",
+        "  w = w + x * 0.1 * error\n",
+        "\n",
+        "  if i % 100 == 99 :\n",
+        "    print(\"학습 횟수 :\",i, \"Error :\",error, \"예측 결과 :\",output)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.47477188589261\n",
+            "학습 횟수 : 99 Error : -0.10010598284299604 예측 결과 : 0.10010598284299604\n",
+            "학습 횟수 : 199 Error : -0.05178399422833116 예측 결과 : 0.05178399422833116\n",
+            "학습 횟수 : 299 Error : -0.034590451977903586 예측 결과 : 0.034590451977903586\n",
+            "학습 횟수 : 399 Error : -0.02588962752851373 예측 결과 : 0.02588962752851373\n",
+            "학습 횟수 : 499 Error : -0.020658699939863617 예측 결과 : 0.020658699939863617\n",
+            "학습 횟수 : 599 Error : -0.017174253993457355 예측 결과 : 0.017174253993457355\n",
+            "학습 횟수 : 699 Error : -0.014689506449480992 예측 결과 : 0.014689506449480992\n",
+            "학습 횟수 : 799 Error : -0.012829497265431342 예측 결과 : 0.012829497265431342\n",
+            "학습 횟수 : 899 Error : -0.011385568271837804 예측 결과 : 0.011385568271837804\n",
+            "학습 횟수 : 999 Error : -0.010232493309882492 예측 결과 : 0.010232493309882492\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -155,8 +207,8 @@
         "colab_type": "text"
       },
       "source": [
-        "## (1) 학습률이 0.2 일 경우 출력층의 노드값 : \n",
-        "## (2) 학습률이 0.1과 0.2 중 기대출력값이 지도데이터 \"3\"과 더 가까운 학습률은? : "
+        "## (1) 학습률이 0.2 일 경우 출력층의 노드값 : 1.68\n",
+        "## (2) 학습률이 0.1과 0.2 중 기대출력값이 지도데이터 \"3\"과 더 가까운 학습률은? : 0.1"
       ]
     },
     {
